Fix spelling error in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "SnapIt",
-  "description": "Download exact visualalization of a webpage",
+  "description": "Download exact visualization of a webpage",
   "version": "1.0",
 
   "manifest_version": 2,
