--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,14 @@
   "manifest_version": 2,
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "assets/camera48.png",
     "default_popup": "popup.html"
+  },
+
+  "icons": {
+    "16": "assets/camera16.png",
+    "48": "assets/camera48.png",
+    "128": "assets/camera128.png"
   },
 
   "permissions": [
